[package]
name = "wheel"
version = "0.1.0"
authors = ["Mark <alnyan@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intrusive-collections = "0.9.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
rlibc = "*"

[dependencies.yboot2-proto]
git = "https://git.alnyan.me/yggdrasil/yboot2-proto.git"
features = ["kernel-protocol"]
